# RK4-Double-Pendulum-Dynamics-simulation

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  build_executable.spec  create_demo.py  main.py  pyproject.toml  refactor.py  requirements.txt  setup.py  setup_presets.py  simulation.py
assets/: README.md
docs/: INSTALLATION.md  USER_GUIDE.md
examples/: basic_usage.py
myenv/: pyvenv.cfg
pendulum_art/: game.py  physics.py  utils.py
presets/: butterfly_cool.json  butterfly_default.json  butterfly_rainbow.json  butterfly_warm.json  chaos_cool.json  chaos_default.json  chaos_rainbow.json  chaos_warm.json  figure_eight_cool.json  figure_eight_default.json  figure_eight_rainbow.json  figure_eight_warm.json  flower_cool.json  flower_default.json  flower_rainbow.json  flower_warm.json  spiral_cool.json  spiral_default.json  spiral_rainbow.json  spiral_warm.json
scripts/: build_executable.py  compress_gif.py  convert_to_gif.py  create_demo.py  package_for_distribution.py
src/: renderer.py
src/pendulum_art/: __init__.py  main.py
tests/: test_physics.py
