[project]
name = "double-pendulum-art"
version = "1.0.0"
description = "An interactive double pendulum simulation that creates beautiful art through chaotic motion"
authors = [
    {name = "mohid khan", email = "mohid@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pygame>=2.0.0",
    "matplotlib>=3.5.0",
]
keywords = ["physics", "simulation", "art", "pendulum", "chaos", "runge-kutta"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Education",
]

[project.urls]
"Homepage" = "https://github.com/mohidkhan/double-pendulum-art"
"Bug Reports" = "https://github.com/mohidkhan/double-pendulum-art/issues"
"Source" = "https://github.com/mohidkhan/double-pendulum-art"

[project.scripts]
pendulum-art = "pendulum_art.game:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pendulum_art*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
