[project]
name = "double-pendulum-art"
version = "1.0.0"
description = "Interactive double pendulum simulation that creates art through chaotic motion"
authors = [
    {name = "mohid khan", email = "mohid@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pygame>=2.0.0",
]
keywords = ["physics", "simulation", "art", "pendulum", "chaos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
"Homepage" = "https://github.com/mohidkhan/double-pendulum-art"
"Source" = "https://github.com/mohidkhan/double-pendulum-art"

[project.scripts]
pendulum-art = "pendulum_art.game:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pendulum_art*"]
